完善后台功能开发
完善后台功能开发

--- a/admin/themes/simplebootx/Portal/AdminCoach/add.html
+++ b/admin/themes/simplebootx/Portal/AdminCoach/add.html
@@ -17,25 +17,33 @@
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
-			<li><a href="{:U('AdminWorks/index')}">{:L('PORTAL_ADMINWORKS_INDEX')}</a></li>
-			<li class="active"><a href="{:U('AdminWorks/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">添加对象</a></li>
+			<li><a href="{:U('AdminCoach/index')}">{:L('PORTAL_ADMINCOACH_INDEX')}</a></li>
+			<li class="active"><a href="{:U('AdminCoach/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">添加教练</a></li>
 		</ul>
-		<form action="{:U('AdminWorks/add_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
+		<form action="{:U('AdminCoach/add_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
 			<input type="hidden" name="post[post_type]" value="3">
+			<input type="hidden" name="term" value="6">
 			<div class="row-fluid">
 				<div class="span9">
 					<table class="table table-bordered">
 						<tr>
-							<th width="80">选择分类</th>
+							<th width="80">教练姓名：</th>
 							<td>
-								<select style="max-height: 100px;" name="term[]">{$taxonomys}</select>
-								<!-- <div>windows：按住 Ctrl 按钮来选择多个选项,Mac：按住 command 按钮来选择多个选项</div> -->
+								<input type="text" style="width:400px;" name="post[post_title]" id="title" required value="" placeholder="请输入教练姓名"/>
+								<span class="form-required">*</span>
 							</td>
 						</tr>
 						<tr>
-							<th>标题</th>
+							<th>教练类型：</th>
 							<td>
-								<input type="text" style="width:400px;" name="post[post_title]" id="title" required value="" placeholder="请输入标题"/>
+								<input type="text" style="width:400px;" name="post[leixing]" id="title" required value="" placeholder="请输入教练类型"/>
+								<span class="form-required">*</span>
+							</td>
+						</tr>
+						<tr>
+							<th>教练经验：</th>
+							<td>
+								<input type="text" style="width:400px;" name="post[jingyan]" id="title" required value="" placeholder="请输入教练经验"/>
 								<span class="form-required">*</span>
 							</td>
 						</tr>
@@ -44,26 +52,15 @@
 							<td><input type="text" name="post[post_keywords]" id="keywords" value="" style="width: 400px" placeholder="请输入关键字"> 多关键词之间用空格或者英文逗号隔开</td>
 						</tr>
 						<tr>
-							<th>文章来源</th>
-							<td><input type="text" name="post[post_source]" id="source" value="" style="width: 400px" placeholder="请输入文章来源"></td>
-						</tr>
-						<tr>
-							<th>摘要</th>
+							<th>教练简介：</th>
 							<td>
-								<textarea name="post[post_excerpt]" id="description" style="width: 98%; height: 50px;" placeholder="请填写摘要"></textarea>
+								<textarea name="post[post_excerpt]" id="description" style="width: 98%; height: 50px;" placeholder="请填写教练简介"></textarea>
 							</td>
 						</tr>
 						<tr>
-							<th>内容</th>
+							<th>教练介绍：</th>
 							<td>
 								<script type="text/plain" id="content" name="post[post_content]"></script>
-							</td>
-						</tr>
-						<tr>
-							<th>相册图集</th>
-							<td>
-								<ul id="photos" class="pic-list unstyled"></ul>
-								<a href="javascript:upload_multi_image('图片上传','#photos','photos-item-wrapper');" class="btn btn-small">选择图片</a>
 							</td>
 						</tr>
 					</table>
@@ -71,7 +68,7 @@
 				<div class="span3">
 					<table class="table table-bordered">
 						<tr>
-							<th><b>缩略图</b></th>
+							<th><b>教练照片：</b></th>
 						</tr>
 						<tr>
 							<td>
@@ -111,29 +108,12 @@
 								<label class="radio"><input type="radio" name="post[recommended]" value="0" checked>未推荐</label>
 							</td>
 						</tr>
-						<tr>
-							<th>文章模板</th>
-						</tr>
-						<tr>
-							<td>
-								<php>
-									$tpl_list=sp_admin_get_tpl_file_list();
-									unset($tpl_list['page']);
-								</php>
-								<select style="min-width: 190px;" name="smeta[template]">
-									<option value="">请选择模板</option>
-									<foreach name="tpl_list" item="vo">
-										<option value="{$vo}">{$vo}{:C("TMPL_TEMPLATE_SUFFIX")}</option>
-									</foreach>
-								</select>
-							</td>
-						</tr>
 					</table>
 				</div>
 			</div>
 			<div class="form-actions">
 				<button class="btn btn-primary js-ajax-submit" type="submit">提交</button>
-				<a class="btn" href="{:U('AdminWorks/index')}">返回</a>
+				<a class="btn" href="{:U('AdminCoach/index')}">返回</a>
 			</div>
 		</form>
 	</div>
@@ -170,11 +150,18 @@
 				//javascript
 
 				//编辑器
-				editorcontent = new baidu.editor.ui.Editor();
+				editorcontent = new baidu.editor.ui.Editor({
+					allowDivTransToP: false,
+				  wordCount:false,
+				  elementPathEnabled:false,
+				  autoHeightEnabled:true,
+				  zIndex:14,
+					initialFrameHeight:350
+				});
 				editorcontent.render('content');
-				try {
-					editorcontent.sync();
-				} catch (err) {
+					try {
+						editorcontent.sync();
+					} catch (err) {
 				}
 				//增加编辑器验证规则
 				jQuery.validator.addMethod('editorcontent', function() {
@@ -231,6 +218,12 @@
 						'post[post_title]' : {
 							required : 1
 						},
+						'post[leixing]' : {
+							required : 1
+						},
+						'post[jingyan]' : {
+							required : 1
+						},
 						'post[post_content]' : {
 							editorcontent : true
 						}
@@ -238,10 +231,16 @@
 					//验证未通过提示消息
 					messages : {
 						'post[post_title]' : {
-							required : '请输入标题'
+							required : '请输入教练姓名'
+						},
+						'post[leixing]' : {
+							required : '请输入教练类型'
+						},
+						'post[jingyan]' : {
+							required : '请输入教练经验'
 						},
 						'post[post_content]' : {
-							editorcontent : '内容不能为空'
+							editorcontent : '教练介绍不能为空'
 						}
 					},
 					//给未通过验证的元素加效果,闪烁等
@@ -282,7 +281,7 @@
 											}, {
 												name : '返回列表页',
 												callback : function() {
-													location = "{:U('AdminWorks/index')}";
+													location = "{:U('AdminCoach/index')}";
 													return true;
 												}
 											} ]
