--- a/admin/themes/simplebootx/Portal/AdminCurriculum/add.html
+++ b/admin/themes/simplebootx/Portal/AdminCurriculum/add.html
@@ -17,74 +17,43 @@
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
-			<li><a href="{:U('AdminWorks/index')}">{:L('PORTAL_ADMINWORKS_INDEX')}</a></li>
-			<li><a href="{:U('AdminWorks/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">添加对象</a></li>
-			<li class="active"><a href="#">编辑对象</a></li>
+			<li><a href="{:U('AdminCurriculum/index')}">{:L('PORTAL_ADMINCURRICULUM_INDEX')}</a></li>
+			<li class="active"><a href="{:U('AdminCurriculum/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">添加课程</a></li>
 		</ul>
-		<form action="{:U('AdminWorks/edit_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
+		<form action="{:U('AdminCurriculum/add_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
 			<input type="hidden" name="post[post_type]" value="3">
+			<input type="hidden" name="term" value="3">
 			<div class="row-fluid">
 				<div class="span9">
 					<table class="table table-bordered">
 						<tr>
-							<th width="80">选择分类</th>
+							<th width="80">课程名称：</th>
 							<td>
-								<select style="max-height: 100px;"name="term[]">{$taxonomys}</select>
-								<!-- <div>windows：按住 Ctrl 按钮来选择多个选项,Mac：按住 command 按钮来选择多个选项</div> -->
+								<input type="text" style="width:400px;" name="post[post_title]" id="title" required value="" placeholder="请输入课程名称"/>
+								<span class="form-required">*</span>
 							</td>
 						</tr>
 						<tr>
-							<th>标题</th>
+							<th>适合人群：</th>
 							<td>
-								<input type="hidden" name="post[id]" value="{$post.id}">
-								<input type="text" style="width: 400px;" name="post[post_title]" required value="{$post.post_title}" placeholder="请输入标题"/>
+								<input type="text" style="width:400px;" name="post[leixing]" id="title" required value="" placeholder="请输入课程适合人群"/>
 								<span class="form-required">*</span>
 							</td>
 						</tr>
 						<tr>
 							<th>关键词</th>
-							<td>
-								<input type="text" name="post[post_keywords]" style="width: 400px" value="{$post['post_keywords']}" placeholder="请输入关键字">
-								多关键词之间用空格或者英文逗号隔开
-							</td>
+							<td><input type="text" name="post[post_keywords]" id="keywords" value="" style="width: 400px" placeholder="请输入关键字"> 多关键词之间用空格或者英文逗号隔开</td>
 						</tr>
-
 						<tr>
-							<th>文章来源</th>
+							<th>课程简介：</th>
 							<td>
-								<input type="text" name="post[post_source]" value="{$post['post_source']}" style="width: 400px" placeholder="请输入文章来源">
+								<textarea name="post[post_excerpt]" id="description" style="width: 98%; height: 50px;" placeholder="请填写课程简介"></textarea>
 							</td>
 						</tr>
 						<tr>
-							<th>摘要</th>
+							<th>课程介绍：</th>
 							<td>
-								<textarea name="post[post_excerpt]" style="width: 98%; height: 50px;" placeholder="请填写摘要">{$post.post_excerpt}</textarea>
-							</td>
-						</tr>
-						<tr>
-							<th>内容</th>
-							<td>
-								<script type="text/plain" id="content" name="post[post_content]">{$post.post_content}</script>
-							</td>
-						</tr>
-						<tr>
-							<th>相册图集</th>
-							<td>
-								<ul id="photos" class="pic-list unstyled">
-									<notempty name="smeta['photo']">
-										<foreach name="smeta['photo']" item="vo">
-										<php>$img_url=sp_get_image_preview_url($vo['url']);</php>
-										<li id="savedimage{$key}">
-											<input id="photo-{$key}" type="hidden" name="photos_url[]" value="{$img_url}">
-											<input id="photo-{$key}-name" type="text" name="photos_alt[]" value="{$vo.alt}" style="width: 200px;" title="图片名称">
-											<img id="photo-{$key}-preview" src="{:sp_get_image_preview_url($vo['url'])}" style="height:36px;width: 36px;" onclick="parent.image_preview_dialog(this.src);">
-											<a href="javascript:upload_one_image('图片上传','#photo-{$key}');">替换</a>
-											<a href="javascript:(function(){ $('#savedimage{$key}').remove();})();">移除</a>
-										</li>
-										</foreach>
-									</notempty>
-								</ul>
-								<a href="javascript:upload_multi_image('图片上传','#photos','photos-item-wrapper');" class="btn btn-small">选择图片</a>
+								<script type="text/plain" id="content" name="post[post_content]"></script>
 							</td>
 						</tr>
 					</table>
@@ -92,81 +61,44 @@
 				<div class="span3">
 					<table class="table table-bordered">
 						<tr>
-							<td><b>缩略图</b></td>
+							<th><b>课程照片：</b></th>
 						</tr>
 						<tr>
 							<td>
 								<div style="text-align: center;">
-									<input type="hidden" name="smeta[thumb]" id="thumb" value="{$smeta.thumb|default=''}">
+									<input type="hidden" name="smeta[thumb]" id="thumb" value="">
 									<a href="javascript:upload_one_image('图片上传','#thumb');">
-										<if condition="empty($smeta['thumb'])">
-											<img src="__TMPL__Public/assets/images/default-thumbnail.png" id="thumb-preview" width="135" style="cursor: hand"/>
-										<else />
-											<img src="{:sp_get_image_preview_url($smeta['thumb'])}" id="thumb-preview" width="135" style="cursor: hand"/>
-										</if>
+										<img src="__TMPL__Public/assets/images/default-thumbnail.png" id="thumb-preview" width="135" style="cursor: hand" />
 									</a>
 									<input type="button" class="btn btn-small" onclick="$('#thumb-preview').attr('src','__TMPL__Public/assets/images/default-thumbnail.png');$('#thumb').val('');return false;" value="取消图片">
 								</div>
 							</td>
 						</tr>
 						<tr>
-							<th>发布时间</th>
+							<th><b>发布时间</b></th>
 						</tr>
 						<tr>
-							<td><input type="text" name="post[post_date]" value="{$post.post_date}" class="js-datetime" style="width: 160px;"></td>
+							<td><input type="text" name="post[post_date]" value="{:date('Y-m-d H:i:s',time())}" class="js-datetime" style="width: 160px;"></td>
 						</tr>
 						<tr>
-							<th>评论</th>
-						</tr>
-						<tr>
-							<td><label style="width: 88px"><a href="javascript:open_iframe_dialog('{:U('comment/commentadmin/index',array('post_id'=>$post['id']))}','评论列表')">查看评论</a></label>
-							</td>
-						</tr>
-						<tr>
-							<th>状态</th>
+							<th><b>状态</b></th>
 						</tr>
 						<tr>
 							<td>
-								<php>
-									$status_yes=$post['post_status']==1?"checked":"";
-									$status_no=$post['post_status']==0?"checked":"";
-									$istop_yes=$post['istop']==1?"checked":"";
-									$istop_no=$post['istop']==0?"checked":"";
-									$recommended_yes=$post['recommended']==1?"checked":"";
-									$recommended_no=$post['recommended']==0?"checked":"";
-								</php>
-								<label class="radio"><input type="radio" name="post[post_status]" value="1" {$status_yes}>审核通过</label>
-								<label class="radio"><input type="radio" name="post[post_status]" value="0" {$status_no}>未审核</label>
+								<label class="radio"><input type="radio" name="post[post_status]" value="1" checked>审核通过</label>
+								<label class="radio"><input type="radio" name="post[post_status]" value="0">待审核</label>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<label class="radio"><input type="radio" name="post[istop]" value="1" {$istop_yes}>置顶</label>
-								<label class="radio"><input type="radio" name="post[istop]" value="0" {$istop_no}>未置顶</label>
+								<label class="radio"><input type="radio" name="post[istop]" value="1">置顶</label>
+								<label class="radio"><input type="radio" name="post[istop]" value="0" checked>未置顶</label>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<label class="radio"><input type="radio" name="post[recommended]" value="1" {$recommended_yes}>推荐</label>
-								<label class="radio"><input type="radio" name="post[recommended]" value="0" {$recommended_no}>未推荐</label>
-							</td>
-						</tr>
-						<tr>
-							<th>文章模板</th>
-						</tr>
-						<tr>
-							<td>
-								<php>
-									$tpl_list=sp_admin_get_tpl_file_list();
-									unset($tpl_list['page']);
-								</php>
-								<select style="min-width: 190px;" name="smeta[template]">
-									<option value="">请选择模板</option>
-									<foreach name="tpl_list" item="vo">
-										<php>$template_selected=$smeta['template']==$vo?"selected":"";</php>
-										<option value="{$vo}"{$template_selected}>{$vo}{:C("TMPL_TEMPLATE_SUFFIX")}</option>
-									</foreach>
-								</select>
+								<label class="radio"><input type="radio" name="post[recommended]" value="1">推荐</label>
+								<label class="radio"><input type="radio" name="post[recommended]" value="0" checked>未推荐</label>
 							</td>
 						</tr>
 					</table>
@@ -174,7 +106,7 @@
 			</div>
 			<div class="form-actions">
 				<button class="btn btn-primary js-ajax-submit" type="submit">提交</button>
-				<a class="btn" href="{:U('AdminWorks/index')}">返回</a>
+				<a class="btn" href="{:U('AdminCurriculum/index')}">返回</a>
 			</div>
 		</form>
 	</div>
@@ -187,8 +119,6 @@
 	<script type="text/javascript" src="__PUBLIC__/js/ueditor/ueditor.all.min.js"></script>
 	<script type="text/javascript">
 		$(function() {
-
-			//setInterval(function(){public_lock_renewal();}, 10000);
 			$(".js-ajax-close-btn").on('click', function(e) {
 				e.preventDefault();
 				Wind.use("artDialog", function() {
@@ -213,11 +143,18 @@
 				//javascript
 
 				//编辑器
-				editorcontent = new baidu.editor.ui.Editor();
+				editorcontent = new baidu.editor.ui.Editor({
+					allowDivTransToP: false,
+				  wordCount:false,
+				  elementPathEnabled:false,
+				  autoHeightEnabled:true,
+				  zIndex:14,
+					initialFrameHeight:350
+				});
 				editorcontent.render('content');
-				try {
-					editorcontent.sync();
-				} catch (err) {
+					try {
+						editorcontent.sync();
+					} catch (err) {
 				}
 				//增加编辑器验证规则
 				jQuery.validator.addMethod('editorcontent', function() {
@@ -225,7 +162,6 @@
 						editorcontent.sync();
 					} catch (err) {
 					}
-					;
 					return editorcontent.hasContents();
 				});
 				var form = $('form.js-ajax-forms');
@@ -238,6 +174,8 @@
 						}
 					});
 				}
+
+				var formloading = false;
 				//表单验证开始
 				form.validate({
 					//是否在获取焦点时验证
@@ -273,6 +211,9 @@
 						'post[post_title]' : {
 							required : 1
 						},
+						'post[leixing]' : {
+							required : 1
+						},
 						'post[post_content]' : {
 							editorcontent : true
 						}
@@ -280,10 +221,13 @@
 					//验证未通过提示消息
 					messages : {
 						'post[post_title]' : {
-							required : '请输入标题'
+							required : '请输入课程名称'
+						},
+						'post[leixing]' : {
+							required : '请输入课程适合人群'
 						},
 						'post[post_content]' : {
-							editorcontent : '内容不能为空'
+							editorcontent : '课程介绍不能为空'
 						}
 					},
 					//给未通过验证的元素加效果,闪烁等
@@ -292,13 +236,16 @@
 					onfocusout : false,
 					//验证通过，提交表单
 					submitHandler : function(forms) {
+						if (formloading)
+							return;
 						$(forms).ajaxSubmit({
 							url : form.attr('action'), //按钮上是否自定义提交地址(多按钮情况)
 							dataType : 'json',
 							beforeSubmit : function(arr, $form, options) {
-
+								formloading = true;
 							},
 							success : function(data, statusText, xhr, $form) {
+								formloading = false;
 								if (data.status) {
 									setCookie("refersh_time", 1);
 									//添加成功
@@ -312,16 +259,16 @@
 											opacity : 0,
 											content : data.info,
 											button : [ {
-												name : '继续编辑？',
+												name : '继续添加？',
 												callback : function() {
-													//reloadPage(window);
+													reloadPage(window);
 													return true;
 												},
 												focus : true
 											}, {
 												name : '返回列表页',
 												callback : function() {
-													location = "{:U('AdminWorks/index')}";
+													location = "{:U('AdminCurriculum/index')}";
 													return true;
 												}
 											} ]
