--- a/admin/themes/simplebootx/Portal/AdminCurriculum/recyclebin.html
+++ b/admin/themes/simplebootx/Portal/AdminCurriculum/recyclebin.html
@@ -3,35 +3,30 @@
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
-			<li class="active"><a href="{:U('AdminWorks/recyclebin')}">{:L('PORTAL_ADMINWORKS_RECYCLEBIN')}</a></li>
+			<li class="active"><a href="{:U('AdminCurriculum/recyclebin')}">{:L('PORTAL_ADMINCURRICULUM_RECYCLEBIN')}</a></li>
 		</ul>
-		<form class="well form-search" method="post" action="{:U('AdminWorks/recyclebin')}">
-			分类：
-			<select name="term" style="width: 120px;">
-				<option value='0'>全部</option>{$taxonomys}
-			</select> &nbsp;&nbsp;
+		<form class="well form-search" method="post" action="{:U('AdminCurriculum/recyclebin')}">
 			时间：
 			<input type="text" name="start_time" class="js-datetime" value="{$formget.start_time|default=''}" style="width: 120px;" autocomplete="off">-
 			<input type="text" class="js-datetime" name="end_time" value="{$formget.end_time}" style="width: 120px;" autocomplete="off"> &nbsp; &nbsp;
 			关键字：
 			<input type="text" name="keyword" style="width: 200px;" value="{$formget.keyword}" placeholder="请输入关键字...">
 			<input type="submit" class="btn btn-primary" value="搜索" />
-			<a class="btn btn-danger" href="{:U('AdminWorks/recyclebin')}">清空</a>
+			<a class="btn btn-danger" href="{:U('AdminCurriculum/recyclebin')}">清空</a>
 		</form>
 		<form class="js-ajax-form" method="post">
 			<div class="table-actions">
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminWorks/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
+				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminCurriculum/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
 			</div>
 			<table class="table table-hover table-bordered table-list">
 				<thead>
 					<tr>
 						<th width="15"><label><input type="checkbox" class="js-check-all" data-direction="x" data-checklist="js-check-x"></label></th>
 						<th width="50">ID</th>
-						<th>{:L('TITLE')}</th>
-						<th width="50">{:L('AUTHOR')}</th>
+						<th>课程名称</th>
+						<th width="50">发布人</th>
 						<th width="50">{:L('HITS')}</th>
-						<th width="50">{:L('COMMENT_COUNT')}</th>
-						<th width="160">{:L('KEYWORDS')}/{:L('SOURCE')}/{:L('ABSTRACT')}/{:L('THUMBNAIL')}</th>
+						<th width="160">{:L('THUMBNAIL')}</th>
 						<th width="100">{:L('PUBLISH_DATE')}</th>
 						<th width="50">{:L('STATUS')}</th>
 						<th width="60">{:L('ACTIONS')}</th>
@@ -50,29 +45,6 @@
 					<td>{$vo.user_nicename|default=$vo.user_login}</td>
 					<td>{$vo.post_hits}</td>
 					<td>
-						<notempty name="vo.comment_count">
-							<a href="javascript:parent.open_iframe_dialog('{:U('comment/commentadmin/index',array('post_id'=>$vo['id']))}','评论列表')">{$vo.comment_count}</a>
-						<else/>
-							{$vo.comment_count}
-						</notempty>
-					</td>
-					<td>
-						<notempty name="vo.post_keywords">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-						<notempty name="vo.post_source">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-						<notempty name="vo.post_excerpt">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-
 						<php>$smeta=json_decode($vo['smeta'],true);</php>
 						<notempty name="smeta.thumb">
 							<a href="javascript:parent.image_preview_dialog('{:sp_get_image_preview_url($smeta['thumb'])}');">
@@ -95,8 +67,8 @@
 						</notempty>
 					</td>
 					<td>
-						<a href="{:U('AdminWorks/restore',array('id'=>$vo['id']))}" class="js-ajax-dialog-btn" data-msg="确定还原吗？">还原</a>|
-						<a href="{:U('AdminWorks/clean',array('id'=>$vo['id'],'id'=>$vo['id']))}" class="js-ajax-delete">删除</a>
+						<a href="{:U('AdminCurriculum/restore',array('id'=>$vo['id']))}" class="js-ajax-dialog-btn" data-msg="确定还原吗？">还原</a>|
+						<a href="{:U('AdminCurriculum/clean',array('id'=>$vo['id'],'id'=>$vo['id']))}" class="js-ajax-delete">删除</a>
 					</td>
 				</tr>
 				</foreach>
@@ -104,11 +76,10 @@
 					<tr>
 						<th width="15"><label><input type="checkbox" class="js-check-all" data-direction="x" data-checklist="js-check-x"></label></th>
 						<th width="50">ID</th>
-						<th>{:L('TITLE')}</th>
-						<th width="50">{:L('AUTHOR')}</th>
+						<th>课程名称</th>
+						<th width="50">发布人</th>
 						<th width="50">{:L('HITS')}</th>
-						<th width="50">{:L('COMMENT_COUNT')}</th>
-						<th width="160">{:L('KEYWORDS')}/{:L('SOURCE')}/{:L('ABSTRACT')}/{:L('THUMBNAIL')}</th>
+						<th width="160">{:L('THUMBNAIL')}</th>
 						<th width="100">{:L('PUBLISH_DATE')}</th>
 						<th width="50">{:L('STATUS')}</th>
 						<th width="60">{:L('ACTIONS')}</th>
@@ -116,7 +87,7 @@
 				</tfoot>
 			</table>
 			<div class="table-actions">
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminWorks/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
+				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminCurriculum/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
 			</div>
 			<div class="pagination">{$page}</div>
 		</form>
