--- a/admin/themes/simplebootx/Portal/AdminMall/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminMall/edit.html
@@ -1,76 +1,75 @@
-<admintpl file="header"/>
+<admintpl file="header" />
+<style type="text/css">
+.pic-list li {
+	margin-bottom: 5px;
+}
+</style>
+<script type="text/html" id="photos-item-wrapper">
+	<li id="savedimage{id}">
+		<input id="photo-{id}" type="hidden" name="photos_url[]" value="{filepath}">
+		<input id="photo-{id}-name" type="text" name="photos_alt[]" value="{name}" style="width: 160px;" title="图片名称">
+		<img id="photo-{id}-preview" src="{url}" style="height:36px;width: 36px;" onclick="parent.image_preview_dialog(this.src);">
+		<a href="javascript:upload_one_image('图片上传','#photo-{id}');">替换</a>
+		<a href="javascript:(function(){$('#savedimage{id}').remove();})();">移除</a>
+	</li>
+</script>
 </head>
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
-			<li><a href="{:U('AdminPage/index')}">{:L('PORTAL_ADMINPAGE_INDEX')}</a></li>
-			<li><a href="{:U('AdminPage/add')}">{:L('PORTAL_ADMINPAGE_ADD')}</a></li>
-			<li class="active"><a href="#">{:L('PORTAL_ADMINPAGE_EDIT')}</a></li>
+			<li><a href="{:U('AdminMall/index')}">{:L('PORTAL_ADMINMALL_INDEX')}</a></li>
+			<li><a href="{:U('AdminMall/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">添加商品</a></li>
+			<li class="active"><a href="#">编辑商品</a></li>
 		</ul>
-		<form action="{:U('Portal/AdminPage/edit_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
-				<input type="hidden" name="post[post_type]" value="2">
-				<div class="row-fluid">
+		<form action="{:U('AdminMall/edit_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
+			<input type="hidden" name="post[post_type]" value="3">
+			<input type="hidden" name="term" value="5">
+			<div class="row-fluid">
 				<div class="span9">
 					<table class="table table-bordered">
 						<tr>
-							<th width="80">标题</th>
+							<th width="80">商品名称：</th>
 							<td>
 								<input type="hidden" name="post[id]" value="{$post.id}">
-								<input type="text" style="width: 400px;" name="post[post_title]" value="{$post.post_title}" placeholder="请输入标题" />
+								<input type="text" style="width: 400px;" name="post[post_title]" required value="{$post.post_title}" placeholder="请输入商品名称"/>
 								<span class="form-required">*</span>
-							</td>
-						</tr>
-						<tr>
-							<th>模版</th>
-							<td>
-								<php>
-									$tpl_list=sp_admin_get_tpl_file_list();
-									unset($tpl_list['page']);
-								</php>
-								<select style="min-width: 290px;" name="smeta[template]">
-									<option value="page">page{:C("TMPL_TEMPLATE_SUFFIX")}</option>
-									<foreach name="tpl_list" item="vo">
-										<php>$template_selected=$smeta['template']==$vo?"selected":"";</php>
-										<option value="{$vo}"{$template_selected}>{$vo}{:C("TMPL_TEMPLATE_SUFFIX")}</option>
-									</foreach>
-								</select>
 							</td>
 						</tr>
 						<tr>
 							<th>关键词</th>
 							<td>
-								<input type="text" name="post[post_keywords]" style="width: 280px" value="{$post['post_keywords']}" placeholder="请输入关键字">
-								多关键词之间用空格隔开
+								<input type="text" name="post[post_keywords]" style="width: 400px" value="{$post['post_keywords']}" placeholder="请输入关键字">
+								多关键词之间用空格或者英文逗号隔开
 							</td>
 						</tr>
 						<tr>
-							<th>摘要</th>
-							<td><textarea name="post[post_excerpt]" style="width: 98%; height: 50px;">{$post.post_excerpt}</textarea>
+							<th>商品简介：</th>
+							<td>
+								<textarea name="post[post_excerpt]" id="description" style="width: 98%; height: 70px;" placeholder="请填写商品简介">{$post.post_excerpt}</textarea>
 							</td>
 						</tr>
 						<tr>
-							<th>内容</th>
+							<th>商品介绍：</th>
 							<td>
 								<script type="text/plain" id="content" name="post[post_content]">{$post.post_content}</script>
 							</td>
 						</tr>
-						</tbody>
 					</table>
 				</div>
 				<div class="span3">
 					<table class="table table-bordered">
 						<tr>
-							<th>缩略图</th>
+							<td><b>商品照片：</b></td>
 						</tr>
 						<tr>
 							<td>
 								<div style="text-align: center;">
-									<input type='hidden' name='smeta[thumb]' id='thumb' value="{$smeta.thumb|default=''}">
+									<input type="hidden" name="smeta[thumb]" id="thumb" value="{$smeta.thumb|default=''}">
 									<a href="javascript:upload_one_image('图片上传','#thumb');">
 										<if condition="empty($smeta['thumb'])">
-											<img src="__TMPL__Public/assets/images/default-thumbnail.png" id='thumb-preview' width='135' height='113' style='cursor: hand' />
+											<img src="__TMPL__Public/assets/images/default-thumbnail.png" id="thumb-preview" width="135" style="cursor: hand"/>
 										<else />
-											<img src="{:sp_get_image_preview_url($smeta['thumb'])}" id='thumb-preview' width='135' height='113' style='cursor: hand' />
+											<img src="{:sp_get_image_preview_url($smeta['thumb'])}" id="thumb-preview" width="135" style="cursor: hand"/>
 										</if>
 									</a>
 									<input type="button" class="btn btn-small" onclick="$('#thumb-preview').attr('src','__TMPL__Public/assets/images/default-thumbnail.png');$('#thumb').val('');return false;" value="取消图片">
@@ -81,7 +80,7 @@
 							<th>发布时间</th>
 						</tr>
 						<tr>
-							<td><input type="text" name="post[post_modified]" value="{$post.post_modified}" class="js-datetime"></td>
+							<td><input type="text" name="post[post_date]" value="{$post.post_date}" class="js-datetime" style="width: 160px;"></td>
 						</tr>
 						<tr>
 							<th>状态</th>
@@ -91,17 +90,33 @@
 								<php>
 									$status_yes=$post['post_status']==1?"checked":"";
 									$status_no=$post['post_status']==0?"checked":"";
+									$istop_yes=$post['istop']==1?"checked":"";
+									$istop_no=$post['istop']==0?"checked":"";
+									$recommended_yes=$post['recommended']==1?"checked":"";
+									$recommended_no=$post['recommended']==0?"checked":"";
 								</php>
 								<label class="radio"><input type="radio" name="post[post_status]" value="1" {$status_yes}>审核通过</label>
-								<label class="radio"><input type="radio" name="post[post_status]" value="0" {$status_no}>待审核</label>
+								<label class="radio"><input type="radio" name="post[post_status]" value="0" {$status_no}>未审核</label>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<label class="radio"><input type="radio" name="post[istop]" value="1" {$istop_yes}>置顶</label>
+								<label class="radio"><input type="radio" name="post[istop]" value="0" {$istop_no}>未置顶</label>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<label class="radio"><input type="radio" name="post[recommended]" value="1" {$recommended_yes}>推荐</label>
+								<label class="radio"><input type="radio" name="post[recommended]" value="0" {$recommended_no}>未推荐</label>
 							</td>
 						</tr>
 					</table>
 				</div>
 			</div>
 			<div class="form-actions">
-				<button class="btn btn-primary js-ajax-submit" type="submit">{:L('SAVE')}</button>
-				<a class="btn" href="javascript:history.back(-1);">{:L('BACK')}</a>
+				<button class="btn btn-primary js-ajax-submit" type="submit">提交</button>
+				<a class="btn" href="{:U('AdminMall/index')}">返回</a>
 			</div>
 		</form>
 	</div>
@@ -114,6 +129,8 @@
 	<script type="text/javascript" src="__PUBLIC__/js/ueditor/ueditor.all.min.js"></script>
 	<script type="text/javascript">
 		$(function() {
+
+			//setInterval(function(){public_lock_renewal();}, 10000);
 			$(".js-ajax-close-btn").on('click', function(e) {
 				e.preventDefault();
 				Wind.use("artDialog", function() {
@@ -144,14 +161,13 @@
 				  elementPathEnabled:false,
 				  autoHeightEnabled:true,
 				  zIndex:14,
-initialFrameHeight:350
+					initialFrameHeight:350
 				});
 				editorcontent.render('content');
 				try {
 					editorcontent.sync();
 				} catch (err) {
 				}
-				;
 				//增加编辑器验证规则
 				jQuery.validator.addMethod('editorcontent', function() {
 					try {
@@ -213,10 +229,10 @@ initialFrameHeight:350
 					//验证未通过提示消息
 					messages : {
 						'post[post_title]' : {
-							required : '请输入标题'
+							required : '请输入商品姓名'
 						},
 						'post[post_content]' : {
-							editorcontent : '内容不能为空'
+							editorcontent : '商品介绍不能为空'
 						}
 					},
 					//给未通过验证的元素加效果,闪烁等
@@ -245,12 +261,18 @@ initialFrameHeight:350
 											opacity : 0,
 											content : data.info,
 											button : [ {
-												name : '确定',
+												name : '继续编辑？',
 												callback : function() {
 													//reloadPage(window);
 													return true;
 												},
 												focus : true
+											}, {
+												name : '返回列表页',
+												callback : function() {
+													location = "{:U('AdminMall/index')}";
+													return true;
+												}
 											} ]
 										});
 									});
