--- a/admin/themes/simplebootx/Portal/AdminMember/index.html
+++ b/admin/themes/simplebootx/Portal/AdminMember/index.html
@@ -3,38 +3,31 @@
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
-			<li class="active"><a href="javascript:;">{:L('PORTAL_ADMINPOST_INDEX')}</a></li>
-			<li><a href="{:U('AdminPost/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">{:L('PORTAL_ADMINPOST_ADD')}</a></li>
+			<li class="active"><a href="javascript:;">{:L('PORTAL_ADMINMEMBER_INDEX')}</a></li>
+			<li><a href="{:U('AdminMember/add',array('term'=>empty($term['term_id'])?'':$term['term_id']))}" target="_self">添加会员卡</a></li>
 		</ul>
-		<form class="well form-search" method="post" action="{:U('AdminPost/index')}">
-			分类：
-			<select name="term" style="width: 120px;">
-				<option value='0'>全部</option>{$taxonomys}
-			</select> &nbsp;&nbsp;
+		<form class="well form-search" method="post" action="{:U('AdminMember/index')}">
 			时间：
 			<input type="text" name="start_time" class="js-datetime" value="{$formget.start_time|default=''}" style="width: 120px;" autocomplete="off">-
 			<input type="text" class="js-datetime" name="end_time" value="{$formget.end_time|default=''}" style="width: 120px;" autocomplete="off"> &nbsp; &nbsp;
 			关键字：
 			<input type="text" name="keyword" style="width: 200px;" value="{$formget.keyword|default=''}" placeholder="请输入关键字...">
 			<input type="submit" class="btn btn-primary" value="搜索" />
-			<a class="btn btn-danger" href="{:U('AdminPost/index')}">清空</a>
+			<a class="btn btn-danger" href="{:U('AdminMember/index')}">清空</a>
 		</form>
 		<form class="js-ajax-form" action="" method="post">
 			<div class="table-actions">
 				<notempty name="term">
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/listorders')}">{:L('SORT')}</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/listorders')}">{:L('SORT')}</button>
 				</notempty>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/check',array('check'=>1))}" data-subcheck="true">审核</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/check',array('uncheck'=>1))}" data-subcheck="true">取消审核</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/top',array('top'=>1))}" data-subcheck="true">置顶</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/top',array('untop'=>1))}" data-subcheck="true">取消置顶</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/recommend',array('recommend'=>1))}" data-subcheck="true">推荐</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/recommend',array('unrecommend'=>1))}" data-subcheck="true">取消推荐</button>
-				<notempty name="term">
-					<button class="btn btn-primary btn-small js-articles-move" type="button">批量移动</button>
-				</notempty>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/check',array('check'=>1))}" data-subcheck="true">审核</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/check',array('uncheck'=>1))}" data-subcheck="true">取消审核</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/top',array('top'=>1))}" data-subcheck="true">置顶</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/top',array('untop'=>1))}" data-subcheck="true">取消置顶</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/recommend',array('recommend'=>1))}" data-subcheck="true">推荐</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/recommend',array('unrecommend'=>1))}" data-subcheck="true">取消推荐</button>
 				<button class="btn btn-primary btn-small js-articles-copy" type="button">批量复制</button>
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/delete')}" data-subcheck="true" data-msg="您确定删除吗？">{:L('DELETE')}</button>
+				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/delete')}" data-subcheck="true" data-msg="您确定删除吗？">{:L('DELETE')}</button>
 			</div>
 			<table class="table table-hover table-bordered table-list">
 				<thead>
@@ -44,11 +37,12 @@
 						<th width="50">{:L('SORT')}</th>
 						</notempty>
 						<th width="50">ID</th>
-						<th>新闻标题</th>
-						<th width="80">发布人</th>
+						<th>会员卡名称</th>
+						<th>会员特权一</th>
+						<th>会员特权二</th>
+						<th width="50">发布人</th>
 						<th width="50">{:L('HITS')}</th>
-						<th width="120">新闻来源</th>
-						<th width="180">{:L('KEYWORDS')}/{:L('ABSTRACT')}/{:L('THUMBNAIL')}</th>
+						<th width="160">{:L('THUMBNAIL')}</th>
 						<th width="100">{:L('PUBLISH_DATE')}</th>
 						<th width="50">{:L('STATUS')}</th>
 						<th width="70">{:L('ACTIONS')}</th>
@@ -62,27 +56,13 @@
 					</notempty>
           <td><b>{$vo.id}</b></td>
 					<td>
-						<notempty name="term">
-						<a href="{:leuu('portal/article/index',array('id'=>$vo['id'],'cid'=>$term['term_id']))}" target="_blank">{$vo.post_title}</a>
-						<else/>
-							{$vo.post_title}
-						</notempty>
+						<a href="{:leuu('portal/article/index',array('id'=>$vo['id'],'cid'=>4))}" target="_blank">{$vo.post_title}</a>
 					</td>
+					<td>{$vo.leixing}</td>
+					<td>{$vo.jingyan}</td>
 					<td>{$vo.user_nicename|default=$vo.user_login}</td>
 					<td>{$vo.post_hits}</td>
-					<td>{$vo.post_source}</td>
 					<td>
-						<notempty name="vo.post_keywords">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-						<notempty name="vo.post_excerpt">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-
 						<php>$smeta=json_decode($vo['smeta'],true);</php>
 						<notempty name="smeta.thumb">
 							<a href="javascript:parent.image_preview_dialog('{:sp_get_image_preview_url($smeta['thumb'])}');">
@@ -109,8 +89,8 @@
 						</notempty>
 					</td>
 					<td>
-						<a href="{:U('AdminPost/edit',array('id'=>$vo['id']))}">{:L('EDIT')}</a> |
-						<a href="{:U('AdminPost/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:L('DELETE')}</a>
+						<a href="{:U('AdminMember/edit',array('id'=>$vo['id']))}">{:L('EDIT')}</a> |
+						<a href="{:U('AdminMember/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:L('DELETE')}</a>
 					</td>
 				</tr>
 				</foreach>
@@ -121,11 +101,12 @@
 						<th width="50">{:L('SORT')}</th>
 						</notempty>
 						<th width="50">ID</th>
-						<th>新闻标题</th>
+						<th>会员卡名称</th>
+						<th>会员特权一</th>
+						<th>会员特权二</th>
 						<th width="50">发布人</th>
 						<th width="50">{:L('HITS')}</th>
-						<th width="50">新闻来源</th>
-						<th width="160">{:L('KEYWORDS')}/{:L('ABSTRACT')}/{:L('THUMBNAIL')}</th>
+						<th >{:L('THUMBNAIL')}</th>
 						<th width="100">{:L('PUBLISH_DATE')}</th>
 						<th width="50">{:L('STATUS')}</th>
 						<th width="70">{:L('ACTIONS')}</th>
@@ -134,19 +115,16 @@
 			</table>
 			<div class="table-actions">
 				<notempty name="term">
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/listorders')}">{:L('SORT')}</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/listorders')}">{:L('SORT')}</button>
 				</notempty>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/check',array('check'=>1))}" data-subcheck="true">审核</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/check',array('uncheck'=>1))}" data-subcheck="true">取消审核</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/top',array('top'=>1))}" data-subcheck="true">置顶</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/top',array('untop'=>1))}" data-subcheck="true">取消置顶</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/recommend',array('recommend'=>1))}" data-subcheck="true">推荐</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/recommend',array('unrecommend'=>1))}" data-subcheck="true">取消推荐</button>
-				<notempty name="term">
-					<button class="btn btn-primary btn-small js-articles-move" type="button">批量移动</button>
-				</notempty>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/check',array('check'=>1))}" data-subcheck="true">审核</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/check',array('uncheck'=>1))}" data-subcheck="true">取消审核</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/top',array('top'=>1))}" data-subcheck="true">置顶</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/top',array('untop'=>1))}" data-subcheck="true">取消置顶</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/recommend',array('recommend'=>1))}" data-subcheck="true">推荐</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/recommend',array('unrecommend'=>1))}" data-subcheck="true">取消推荐</button>
 				<button class="btn btn-primary btn-small js-articles-copy" type="button">批量复制</button>
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/delete')}" data-subcheck="true" data-msg="你确定删除吗？">{:L('DELETE')}</button>
+				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/delete')}" data-subcheck="true" data-msg="你确定删除吗？">{:L('DELETE')}</button>
 			</div>
 			<div class="pagination">{$page}</div>
 		</form>
@@ -156,7 +134,7 @@
 		function refersh_window() {
 			var refersh_time = getCookie('refersh_time');
 			if (refersh_time == 1) {
-				window.location = "{:U('AdminPost/index',$formget)}";
+				window.location = "{:U('AdminMember/index',$formget)}";
 			}
 		}
 		setInterval(function() {
@@ -186,7 +164,7 @@
 					}
 
 					ids= ids.join(',');
-					art.dialog.open("__ROOT__/index.php?g=portal&m=AdminPost&a=copy&ids="+ ids, {
+					art.dialog.open("__ROOT__/index.php?g=portal&m=AdminMember&a=copy&ids="+ ids, {
 						title : "批量复制",
 						width : "300px"
 					});
@@ -212,7 +190,7 @@
 					}
 
 					ids= ids.join(',');
-					art.dialog.open("__ROOT__/index.php?g=portal&m=AdminPost&a=move&old_term_id={$term.term_id|default=0}&ids="+ ids, {
+					art.dialog.open("__ROOT__/index.php?g=portal&m=AdminMember&a=move&old_term_id={$term.term_id|default=0}&ids="+ ids, {
 						title : "批量移动",
 						width : "300px"
 					});
