--- a/admin/themes/simplebootx/Portal/AdminMember/recyclebin.html
+++ b/admin/themes/simplebootx/Portal/AdminMember/recyclebin.html
@@ -3,34 +3,32 @@
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
-			<li class="active"><a href="{:U('AdminPost/recyclebin')}">{:L('PORTAL_ADMINPOST_RECYCLEBIN')}</a></li>
+			<li class="active"><a href="{:U('AdminMember/recyclebin')}">{:L('PORTAL_ADMINMEMBER_RECYCLEBIN')}</a></li>
 		</ul>
-		<form class="well form-search" method="post" action="{:U('AdminPost/recyclebin')}">
-			分类：
-			<select name="term" style="width: 120px;">
-				<option value='0'>全部</option>{$taxonomys}
-			</select> &nbsp;&nbsp;
+		<form class="well form-search" method="post" action="{:U('AdminMember/recyclebin')}">
 			时间：
 			<input type="text" name="start_time" class="js-datetime" value="{$formget.start_time|default=''}" style="width: 120px;" autocomplete="off">-
 			<input type="text" class="js-datetime" name="end_time" value="{$formget.end_time}" style="width: 120px;" autocomplete="off"> &nbsp; &nbsp;
 			关键字：
 			<input type="text" name="keyword" style="width: 200px;" value="{$formget.keyword}" placeholder="请输入关键字...">
 			<input type="submit" class="btn btn-primary" value="搜索" />
-			<a class="btn btn-danger" href="{:U('AdminPost/recyclebin')}">清空</a>
+			<a class="btn btn-danger" href="{:U('AdminMember/recyclebin')}">清空</a>
 		</form>
 		<form class="js-ajax-form" method="post">
 			<div class="table-actions">
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
+				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
 			</div>
 			<table class="table table-hover table-bordered table-list">
 				<thead>
 					<tr>
 						<th width="15"><label><input type="checkbox" class="js-check-all" data-direction="x" data-checklist="js-check-x"></label></th>
 						<th width="50">ID</th>
-						<th>新闻标题</th>
-						<th width="80">发布人</th>
+						<th>会员卡名称</th>
+						<th>会员特权一</th>
+						<th>会员特权二</th>
+						<th width="50">发布人</th>
 						<th width="50">{:L('HITS')}</th>
-						<th width="120">新闻来源</th>
+						<th width="160">{:L('THUMBNAIL')}</th>
 						<th width="100">{:L('PUBLISH_DATE')}</th>
 						<th width="50">{:L('STATUS')}</th>
 						<th width="60">{:L('ACTIONS')}</th>
@@ -46,21 +44,11 @@
 					<td><input type="checkbox" class="js-check" data-yid="js-check-y" data-xid="js-check-x" name="ids[{$vo.id}]" value="{$vo.id}"></td>
 					<td><b>{$vo.id}</b></td>
 					<td>{$vo.post_title}</td>
+					<td>{$vo.leixing}</td>
+					<td>{$vo.jingyan}</td>
 					<td>{$vo.user_nicename|default=$vo.user_login}</td>
 					<td>{$vo.post_hits}</td>
-					<td>{$vo.post_source}</td>
 					<td>
-						<notempty name="vo.post_keywords">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-						<notempty name="vo.post_excerpt">
-							<i class="fa fa-check fa-fw"></i>
-						<else/>
-							<i class="fa fa-close fa-fw"></i>
-						</notempty>
-
 						<php>$smeta=json_decode($vo['smeta'],true);</php>
 						<notempty name="smeta.thumb">
 							<a href="javascript:parent.image_preview_dialog('{:sp_get_image_preview_url($smeta['thumb'])}');">
@@ -83,8 +71,8 @@
 						</notempty>
 					</td>
 					<td>
-						<a href="{:U('AdminPost/restore',array('id'=>$vo['id']))}" class="js-ajax-dialog-btn" data-msg="确定还原吗？">还原</a>|
-						<a href="{:U('AdminPost/clean',array('id'=>$vo['id'],'id'=>$vo['id']))}" class="js-ajax-delete">删除</a>
+						<a href="{:U('AdminMember/restore',array('id'=>$vo['id']))}" class="js-ajax-dialog-btn" data-msg="确定还原吗？">还原</a>|
+						<a href="{:U('AdminMember/clean',array('id'=>$vo['id'],'id'=>$vo['id']))}" class="js-ajax-delete">删除</a>
 					</td>
 				</tr>
 				</foreach>
@@ -92,10 +80,12 @@
 					<tr>
 						<th width="15"><label><input type="checkbox" class="js-check-all" data-direction="x" data-checklist="js-check-x"></label></th>
 						<th width="50">ID</th>
-						<th>新闻标题</th>
-						<th width="80">发布人</th>
+						<th>会员卡名称</th>
+						<th>会员特权一</th>
+						<th>会员特权二</th>
+						<th width="50">发布人</th>
 						<th width="50">{:L('HITS')}</th>
-						<th width="120">新闻来源</th>
+						<th width="160">{:L('THUMBNAIL')}</th>
 						<th width="100">{:L('PUBLISH_DATE')}</th>
 						<th width="50">{:L('STATUS')}</th>
 						<th width="60">{:L('ACTIONS')}</th>
@@ -103,7 +93,7 @@
 				</tfoot>
 			</table>
 			<div class="table-actions">
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminPost/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
+				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminMember/clean')}" data-subcheck="true" data-msg="你确定删除吗？删除后无法恢复！">{:L('DELETE')}</button>
 			</div>
 			<div class="pagination">{$page}</div>
 		</form>
